@@ -1,3 +1,11 @@
+2007-09-13  Jonh Wendell  <jwendell@gnome.org>
+
+	* src/vinagre-tab.[ch],
+	* src/vinagre-window.[ch],
+	* src/vinagre-notebook.[ch],
+	* src/vinagre-commands.c:
+	  - Uses auth-failure signal from gtk-vnc.
+
 2007-09-11  Jonh Wendell  <jwendell@gnome.org>
 
 	* src/vinagre-tab.c,
